argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.flakeide.com`) # 여기서 도메인을 실제 사용 도메인으로 변경
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: "letsencrypt"
